[gd_scene load_steps=19 format=3 uid="uid://cmph8i82gv88v"]

[ext_resource type="Script" path="res://scripts/snake.gd" id="1_utow3"]
[ext_resource type="Texture2D" uid="uid://udsd3upue8vd" path="res://assets/sprites/enemies/snake02-spritesheet.png" id="1_wnpxa"]
[ext_resource type="PackedScene" uid="uid://brq2cqxpoewop" path="res://scenes/killzone.tscn" id="2_chogt"]
[ext_resource type="Texture2D" uid="uid://bfkml4uymc4vt" path="res://assets/sprites/enemies/Detection Ray.png" id="3_f26af"]
[ext_resource type="AudioStream" uid="uid://bsjlupglgw7m5" path="res://assets/sounds/snake-attack.wav" id="5_p55yv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eydhk"]
atlas = ExtResource("1_wnpxa")
region = Rect2(0, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kgy3"]
atlas = ExtResource("1_wnpxa")
region = Rect2(48, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1dyv"]
atlas = ExtResource("1_wnpxa")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dqmd"]
atlas = ExtResource("1_wnpxa")
region = Rect2(144, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5ns5"]
atlas = ExtResource("1_wnpxa")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igomi"]
atlas = ExtResource("1_wnpxa")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgcsd"]
atlas = ExtResource("1_wnpxa")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dowx2"]
atlas = ExtResource("1_wnpxa")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hxaa"]
atlas = ExtResource("1_wnpxa")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btwg0"]
atlas = ExtResource("1_wnpxa")
region = Rect2(240, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kc44r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eydhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kgy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1dyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dqmd")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"detect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5ns5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igomi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgcsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dowx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hxaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btwg0")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1atgg"]
size = Vector2(11, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slc6w"]
size = Vector2(16, 25)

[node name="Snake" type="Node2D"]
script = ExtResource("1_utow3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_kc44r")
animation = &"walk"
autoplay = "walk"

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.254902)
show_behind_parent = true
position = Vector2(-37, -10)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_f26af")

[node name="killzone" parent="." instance=ExtResource("2_chogt")]
position = Vector2(-13.5, -17)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_1atgg")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(16, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(-16, -3)
target_position = Vector2(0, 5)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(-35, 0)

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p55yv")
bus = &"SFX"

[node name="DetectionCone" type="Area2D" parent="."]
position = Vector2(-14, -23)
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionCone"]
polygon = PackedVector2Array(0, 0, -36, -22, -50, 0, -36, 22)

[node name="AttackZone" type="Area2D" parent="."]
position = Vector2(-27, -13.5)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource("RectangleShape2D_slc6w")

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
[connection signal="body_exited" from="killzone" to="." method="_on_killzone_body_exited"]
[connection signal="body_shape_entered" from="DetectionCone" to="." method="_on_detection_cone_body_shape_entered"]
[connection signal="body_shape_exited" from="DetectionCone" to="." method="_on_detection_cone_body_shape_exited"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_attack_zone_body_entered"]
